feat: Implement services and enhance UI
This commit show the new 'Services' feature and includes a significant UI overhaul for a better user experience.

Key changes include:

Services & Counselors Feature:
  - Implemented a new section for users to browse available services.
  - Added counselor profiles with images and details.
  - Created new seeders for services and updated the database structure.
  - Modified the `CounselorController` and `Counselor` model to support these changes.

UI/UX Redesign:
  - Revamped the user interface with new CSS, animations, and imagery for a more modern and engaging feel.
  - Updated the main user layout, welcome page, and views for services and the freedom wall.
  - Replaced old stylesheets with a new, more organized structure.

Freedom Wall (E-Hayag) Enhancements:
  - Updated the views for the 'Freedom Wall' feature to align with the new design.

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6,9 +6,17 @@
     --nu-blue: #35408E;
     --nu-gold: #FFCC33;
     --nu-light: #FFFFFF;
-    --nu-gray: #F8F9FA;
+    --nu-gray: #F5F9FF;
     --nu-success: #0D6EFD;
-    --nu-blue-light: #E6E8F5;
+    --nu-blue-light: #F5F9FF;
     --nu-blue-lighter: #F5F6FB;
     --nu-gold-light: #FFF5D9;
 }
+body, main {
+    margin-top: 0 !important;
+    padding-top: 0 !important;
+    overflow-x: hidden;
+      
+}
+
+
