--- a/public/css/welcome.css
+++ b/public/css/welcome.css
@@ -15,13 +15,7 @@ body, .welcome-header-hero, .welcome-main-title, .welcome-contact, .welcome-unde
     margin-right: -50vw;
     position: relative;
     max-width: 100vw;
-    background: linear-gradient(
-        to right,
-        rgba(255, 255, 255, 0.948) 0%,
-        rgba(236,236,236,0.75) 75%,
-        rgba(255, 255, 255, 0.485) 90%,
-        rgba(255, 255, 255, 0.473) 100%
-      ),
+    background: linear-gradient(45deg, var(--nu-blue) 0%, #2a4b8dbb),
       url('/nu-laguna-hero.jpg') center 65%/cover no-repeat;
     border-radius: 0;
     padding: 0.5rem 2rem 0.5rem 2rem;
@@ -43,14 +37,14 @@ body, .welcome-header-hero, .welcome-main-title, .welcome-contact, .welcome-unde
 }
 
 .welcome-main-title {
-    color: var(--nu-blue);
+    color: var(--nu-light);
     font-size: 50px;
     font-weight:600;
     line-height: 1.1;
     margin-bottom: 12px;
     letter-spacing: 1px;
     white-space: nowrap;
-    text-shadow: 0 4px 12px rgba(44, 62, 94, 0.18), 0 1.5px 0 #fff;
+    text-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
 }
 
 .welcome-underline {
@@ -67,9 +61,9 @@ body, .welcome-header-hero, .welcome-main-title, .welcome-contact, .welcome-unde
     gap: 10px;
     margin-top: 10px;
     font-size: 20px;
-    color: #2d3e94;
+    color: #ffffff;
     font-weight: 500;
-   
+    text-shadow: 0 1px 4px rgba(0, 0, 0, 0.25);
 }
 
 .welcome-icon {
@@ -234,7 +228,7 @@ body, .welcome-header-hero, .welcome-main-title, .welcome-contact, .welcome-unde
 }
 
 .container {
-    max-width: 1200px;
+    max-width: 1100px;
     margin: 0 auto;
     width: 100%;
     box-sizing: border-box;
